# mdbook-typst-highlight

./: Cargo.toml  README.md
.github/workflows/: release.yml
example-book/: .gitignore  book.toml
example-book/src/: SUMMARY.md  chapter_1.md  chapter_2.md
example-book/src/indented/: indented.md
src/: lib.rs  main.rs
